# R6-No-Recoil

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gitpod.yml  .prettierignore  CMakeLists.txt  CMakeLists_mingw.txt  Config.toml  README.md  xmake.lua
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: CI.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
adaptiveness/: CLIENT.html  REQUIREMENTS.txt  SCRIPT.py
cmake/: mingw-toolchain.cmake
data/: Config.toml  WeaponData.json
include/: Button.hpp  Config.hpp  RecoilPresets.hpp  UI.hpp  Utils.hpp
scripts/: UpdateTool  UpdateTool.bat  build  build.sh  macos-build
src/: Globals.cpp  Globals.h  Globals.hpp  Main.cpp  main.cpp
src/app/: Globals.h  Main.cpp
src/app/core/: Keys.cpp  Keys.h
src/app/detection/: OperatorSelection.cpp  WeaponDisplay.cpp
src/app/drawing/: Drawing.h
src/app/files/: Config.cpp  WeaponData.cpp
src/app/recoil/: Recoil.h
src/app/scenes/: Scenes.h
src/app/threads/: Threads.h
src/app/ui/: Bitmap.cpp
src/app/ui/widgets/: Button.cpp
src/config/: Config.cpp
src/config-editor/: CMakeLists.txt  README.md
src/config-editor/resource/: resource.rc
src/config-editor/src/: main.cpp
src/config-editor/ui/: index.html  package.json
src/config-editor/ui/src/: main.js  style.css
src/core/: Bitmap.cpp  Bitmap.h  Bitmap.hpp  BitmapLoader.cpp  BitmapLoader.hpp  CompilerUtils.h  Config.cpp  Config.hpp  EventHandler.cpp  EventHandler.hpp  File.cpp  File.hpp  RecoilPresets.hpp  String.cpp  String.h  String.hpp  Threads.cpp  macros.h  random.h  random.hpp
src/core/utils/: String.cpp  String.h  String.hpp  clamp.h  clamp.hpp  max.h  max.hpp  random.hpp
src/detection/: AttachmentDisplay.cpp  ClickDetection.h  OperatorSelection.cpp  WeaponDisplay.cpp
src/drawing/: AttachmentDisplay.cpp  Drawing.h  InfoScreen.cpp  LandingPage.cpp  MainMenu.cpp  OperatorSelection.cpp  WeaponDisplay.cpp
src/files/: Config.cpp  Files.h  Path.cpp  WeaponData.cpp
src/handlers/: ButtonHandler.cpp  ButtonHandler.h
src/inputs/: Controller.cpp  Inputs.h  Mouse.cpp
src/recoil/: ApplyRecoil.cpp  ApplyRecoil.hpp  Recoil.cpp  Recoil.h  Recoil.hpp  Struct.h  Structs.cpp  Structs.h  Threads.cpp  Threads.h  ToggleRecoil.cpp  ToggleRecoil.hpp
src/recoil/threads/: ApplyRecoil.cpp  ApplyRecoil.hpp  ToggleRecoil.cpp  ToggleRecoil.hpp
src/resource/: resource.rc
src/resources/: app_version.rc
src/scenes/: InfoScreen.cpp  LandingPage.cpp  OperatorSelection.cpp  Scenes.cpp  Scenes.h  WeaponDisplay.cpp
src/scenes/drawing/: InfoScreen.cpp  LandingPage.cpp  OperatorSelection.cpp  WeaponDisplay.cpp
src/threads/: ApplyRecoil.cpp  Threads.cpp  Threads.h  ToggleRecoil.cpp
src/ui/: Bitmap.cpp  Bitmap.h  Button.h  Button.hpp  Font.cpp  Font.hpp  Themes.cpp  Themes.h  UI.cpp  UI.h  UI.hpp
src/ui/views/: InfoScreen.cpp  LandingPage.cpp  OperatorSelection.cpp  Views.h  WeaponDisplay.cpp
src/ui/widgets/: Button.cpp  Button.h  Font.cpp  Font.h
src/utils/: FileUtils.h  GdiHelpers.h  LayoutUtils.h  MathUtils.h  String.h  StringUtils.h  WindowUtils.h
tests/: GetWeaponData.cpp  SaveWeaponData.cpp
tests/WeaponData/: SaveWeaponRecoil.cpp  WeaponData.json
tests/files/: GetWeaponData.cpp  SaveWeaponData.cpp  Structs.h
website/: .gitignore  package.json  vite.config.ts
website/src/: BaseLayout.astro  app.d.ts  app.html
website/src/pages/: download.astro  index.astro  themes.astro
website/src/routes/: +page.svelte
website/src/styles/: styles.css
